# cooperative_sokoban

./: readme.txt
csoko_launchers/: CMakeLists.txt  package.xml
csoko_launchers/launch/: csoko_thinker_base.launch  csoko_thinker_complex.launch
csoko_resources/: CMakeLists.txt  package.xml
csoko_resources/maps/: sokobanMap1  sokobanMap1.yaml  sokobanMap2  sokobanMap2.yaml  test.yaml  tiled.tmx  tiled2.tmx  tiled3.tmx
csoko_solver/: CMakeLists.txt  package.xml
csoko_thinker/: CMakeLists.txt  package.xml
csoko_thinker/include/csoko_thinker/: csoko_box.h  csoko_frame.h  csoko_map.h  csoko_object.h  csoko_robot.h  csoko_solver.h  csoko_thinker.h  csoko_tile.h
csoko_thinker/src/: csoko_box.cpp  csoko_frame.cpp  csoko_map.cpp  csoko_object.cpp  csoko_robot.cpp  csoko_solver.cpp  csoko_thinker.cpp  csoko_tile.cpp  sokobanmap.cpp
