cmake_minimum_required(VERSION 2.8.3)
project(csoko_resources)


find_package(catkin REQUIRED)


################################################
## Declare ROS messages, services and actions ##
################################################



################################################
## Declare ROS dynamic reconfigure parameters ##
################################################


###################################
## catkin specific configuration ##
###################################
catkin_package(
)

###########
## Build ##
###########


#############
## Install ##
#############



#############
## Testing ##
#############
